--- a/.github/workflows/scrape-reviews.yml
+++ b/.github/workflows/scrape-reviews.yml
@@ -2,15 +2,16 @@ name: Scrape Avito Reviews
 
 on:
   schedule:
-    # Запускаем каждый понедельник в 9:00 UTC (12:00 по Москве)
+    # Запускаем каждый понедельник в 9:00 утра
     - cron: '0 9 * * 1'
   workflow_dispatch:  # Позволяет запускать вручную
-  push:
-    branches: [ main ]
 
 jobs:
   scrape-reviews:
     runs-on: ubuntu-latest
+    
+    permissions:
+      contents: write
     
     steps:
     - name: 📥 Скачиваем код
@@ -28,19 +29,38 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
-    - name: 🚀 Запускаем парсер отзывов
+    - name: 🚀 Запускаем сбор отзывов
       run: |
         python scraper.py
         
     - name: 📊 Показываем результат
       run: |
-        echo "=== РЕЗУЛЬТАТ РАБОТЫ ПАРСЕРА ==="
-        cat reviews.json
-        echo "================================="
+        echo "=== РЕЗУЛЬТАТ РАБОТЫ ==="
+        ls -la reviews.json
+        echo "Первые 500 символов файла:"
+        head -c 500 reviews.json
+        echo ""
         
-    - name: 💾 Сохраняем изменения
+    - name: 💾 Настраиваем Git
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        
+    - name: 📝 Коммитим изменения
+      run: |
         git add reviews.json
-        git diff --quiet && git diff --staged --quiet || (git commit -m "🤖 Авто-обновление отзывов [$(date +%Y-%m-%d)]" && git push)
+        # Проверяем есть ли изменения
+        if git diff --staged --quiet; then
+          echo "🔄 Нет изменений для коммита"
+        else
+          git commit -m "🤖 Авто-обновление отзывов [$(date +%Y-%m-%d)]"
+          echo "✅ Изменения закоммичены"
+        fi
+        
+    - name: 🚀 Пушим изменения
+      run: |
+        # Пробуем сделать push с принудительной перезаписой истории (аккуратно)
+        git pull --rebase origin main
+        git push origin main
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
